			Java Electric change log

NOTE: Please place changes under the version that will be released next.

************************* Version 8.02j: *********************************

IMP: (03/30/05, GVG) Ability to change color in 3D background.

FIX: (03/30/05, JKG) fix situation where attribute on instance with same name of parameter
    on contents view would incorrectly not be marked as a parameter.

FIX: (03/30/05, JKG) TextUtils.formatDouble() made thread safe

IMP: (03/30/05, JKG) Added checking for conflicting logical effort parameters in designs

IMP: (03/30/05, SMR) Placing a large cell instance in an empty window zooms the window to fit (Bug #214).

BUG: (03/30/05, SMR) Shift-Right-click to zoom will zoom out if the area is too small (Bug #27).
FIX: In ClickZoomWireListener.mouseReleased(), use smarter determination of a point-click.

BUG: (03/30/05, SMR) "Duplicate Cell" does not default to the current cell (Bug #228).
FIX: In "CellBrowser.performAction()", call updateCellList() in the duplicate case.

BUG: (03/30/05, GVG) if tech is set to 4 or less metal layers, TechPalette still draws them.
FIX: getNodesGrouped() check notUsed nodes and arc and remove them from original matrix.

BUG: (03/29/05, SMR) GDS input doesn't handle orientation of instance arrays (AREF)
FIX: Use same method as single instances (SREF).

BUG (03/29/05, RK) NCC: Obtain VarContext from Current Window.

IMP: (03/29/05, RK) NCC: Superficial changes to names, etc.

IMP/MAN: (03/29/05, GVG) Icons in technology palette are arranged per layer Z position from bottom of the wafer.
"Pure/Misc/Cell" menus are on the top and transistors on the bottom. Metal contacts are sorted by lower metal.

IMP/MAN: (03/29/05, GVG) Tabs on Mac are aligned on the left (Bug# 226)

BUG: (03/29/05, SMR) Saving new JELIB files doesn't mark the library as "from disk", causing
     subsequent saves to prompt for a file name (Bug #227).
FIX: In output.JELIB.writeTheLibrary(), set "from disk" after saving library.
